argocd/external-services/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-svc-syncthing
spec:
  type: ExternalName
  externalName: truenas.bowmans.site
  ports:
    - port: 8384
